# zeenat-dev

./: .cache  .ocamlformat  about.html  contact.html  dune-project  index.html  projects.html  style.css  zeenat-dev.opam  zeenat-dev.opam.template
.github/workflows/: deploy.yml
assets/css/: reset.css  style.css
assets/templates/: layout.html
content/pages/: about.md  contact.md  index.md  projects.md
